# stix2-explorer

./: .gitignore  Makefile  README.md  config.json  docker-compose.yml  pyproject.toml
data/mitre-attack-enterprise/: campaigns.csv  data_components.csv  data_sources.csv  layout.dot  malware.csv  mapping_stats.csv  (+8 more)
data/mitre-attack-enterprise-to-nist-sp-800-53-r5/: controls_to_techniques.csv  layout.dot  mapping_stats.csv  mappings.csv
docs/: architecture.dot  capec.dot  enterprise-attack.dot  mbc.dot
examples/: constants.py  draw_stix2_bundle.py  draw_triples.py  extract-triples.py  get_mitre_attack_enterprise_matrix.py  get_mitre_attack_enterprise_to_nist_sp_800_53_matrix.py  get_mitre_capec_matrix.py  get_mitre_mbc_matrix.py  get_nist_sp_800_53_matrix.py  import-mitre-stix2-content-into-networkx.py  import_stix2_content_into_neo4j.py  list-stix2-objects.py  query_mitre_attack_enterprise.py  query_mitre_attack_enterprise_and_nist_sp_800_53.py  query_mitre_attack_enterprise_to_nist_sp_800_53_mappings.py  query_mitre_attack_ics.py  query_mitre_attack_mobile.py  query_mitre_capec.py  query_mitre_mbc.py  query_nist_sp_800_53_r4.py  query_stix2_data_sources.py
private/: test.csv
scripts/: process-mitre-attack-enterprise-mappings.sql  process-mitre-attack-enterprise-to-nist-sp-800-53-r5-mappings.sql  process-mitre-attack-enterprise.sql  process-mitre-capec-mappings.sql  process-mitre-mbc-mappings.sql  process-nist-sp-800-53-r5-mappings.sql  render-all-dot-files.sh
stix2_explorer/: cli.py  config.py  constants.py  converter.py  decoders.py  serialization.py  util.py
(+11 files in other folders)
