[tool.poetry]
name = "stix2-explorer"
version = "1.0.0"
description = "Explore STIX 2 content with networkX, polars, pandas, and stix2"
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stix2_explorer"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.1"
stix2 = "^3.0.1"
taxii2-client = "^2.3.0"
requests = "^2.31.0"
click = "^8.1.7"
jcs = "^0.2.1"
neo4j = "^5.22.0"

[tool.poetry.scripts]
tool = "stix2_explorer.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
